--- a/main.html
+++ b/main.html
@@ -7,7 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Iphone</li>
+		<li data-ns-test="shoppingList">MackBook</li>
+		<li data-ns-test="shoppingList">Car</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">Russia</li>
+		<li data-ns-test="holidayList">Denmark</li>
+		<li data-ns-test="holidayList">Turkey</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
